--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "author": "Volodymyr Danyliv",
   "license": "BSD-2-Clause",
   "devDependencies": {
+    "instagram-node": "^0.5.8",
     "telegram-node-bot": "~2.1.2",
     "tiny_request": "~1.0.8",
     "twitter": "^1.3.0"
