--- a/package.json
+++ b/package.json
@@ -22,5 +22,13 @@
     "telegram-node-bot": "~2.1.2",
     "tiny_request": "~1.0.8",
     "twitter": "^1.3.0"
+  },
+  "engines": {
+    "node": "5.11.1"
+  },
+  "dependencies": {
+    "telegram-node-bot": "~2.1.2",
+    "tiny_request": "~1.0.8",
+    "twitter": "^1.3.0"
   }
 }
