--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
   "dependencies": {
     "telegram-node-bot": "~2.1.2",
     "tiny_request": "~1.0.8",
-    "twitter": "^1.3.0"
+    "twitter": "^1.3.0",
+    "ejs": "~1.0.0",
+    "express": "~4.9.8"
   }
 }
