--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "instagram-node": "^0.5.8",
     "twitter": "^1.3.0",
     "ejs": "~1.0.0",
-    "express": "~4.9.8"
+    "express": "~4.9.8",
+    "immutable": "^3.8.1"
   }
 }
